2004-04-05  Lluis Sanchez Gual  <lluis@ximian.com>

	* Mono.Data.SybaseClient.dll.sources: Removed SybaseConnectionPool.cs.
	* Mono.Data.SybaseClient/SybaseConnection.cs: Use connection pool
	  implemented in Mono.Data.Tds.

2004-04-01  Lluis Sanchez Gual  <lluis@ximian.com>

	* Mono.Data.SybaseClient/SybaseDataReader.cs: Null values are now 
	  represented with DBNull instances. Deal with this.
	* Mono.Data.SybaseTypes/SybaseNullValueException.cs: Use a more clarifying
	  error message.

2003-12-19  Tim Coleman <tim@timcoleman.com>
	* Mono.Data.SybaseClient/SybasePermission.cs:
		Change constructor.

2003-07-17  Peter Williams  <peter@newton.cx>

	* Mono.Data.SybaseTypes/SybaseDecimal.cs: csc.exe is more
	stringent about namespaces than mcs. We need to disambiguate
	System.Math from Mono.Math here.

2003-06-11  Tim Coleman <tim@timcoleman.com>
	* SybaseConnection.cs:
		Make connection parameter parsing "more correct"
		and throw appropriate exceptions, similar to MS SqlClient
	* SybaseBinary.cs:
	* SybaseBoolean.cs:
	* SybaseByte.cs:
	* SybaseDateTime.cs:
	* SybaseDecimal.cs:
	* SybaseDouble.cs:
	* SybaseMoney.cs:
	* SybaseString.cs:
		Mass import of code from SqlClient to make this behave
		better.

2003-02-16  Daniel Morgan <danmorg@sc.rr.com>

	* SybaseConnection.cs: - parse data source for 2 possible uses:
	"Server=hostname", 
	"Server=hostname,port" and open the connection based on the
	resulting server name and port.  

2002-12-01  Tim Coleman <tim@timcoleman.com>
        * Mono.Data.SybaseClient/SybaseDataReader.cs:
                Change to reflect TdsSchemaInfo -> TdsDataColumnCollection
                shift.

2002-11-26  Tim Coleman <tim@timcoleman.com>
	* Mono.Data.SybaseClient.build:
		Copy dll into Test directory.
	* Mono.Data.SybaseClient/SybaseCommand.cs:
	* Mono.Data.SybaseClient/SybaseConnection.cs:
	* Mono.Data.SybaseClient/SybaseParameter.cs:
	* Mono.Data.SybaseClient/SybaseParameterCollection.cs:
	* Mono.Data.SybaseClient/SybaseTransaction.cs: